Import of JELU/Lim-Plugin-DNS-0.11 from CPAN.
gitpan-cpan-distribution: Lim-Plugin-DNS
gitpan-cpan-version:      0.11
gitpan-cpan-path:         JELU/Lim-Plugin-DNS-0.11.tar.gz
gitpan-cpan-author:       JELU
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Lim-Plugin-DNS
-version:            0.10
+version:            0.11
 abstract:           DNS Manager plugin for Lim
 author:
     - Jerry Lundström <lundstrom.jerry@gmail.com>
@@ -9,8 +9,6 @@ distribution_type:  module
 configure_requires:
     ExtUtils::MakeMaker:  0
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
     common::sense:  3
     Digest::SHA:    5
     Fcntl:          1.06
@@ -18,6 +16,13 @@ requires:
     Lim:            0.14
     Scalar::Util:   1
     Test::More:     0
+requires:
+    common::sense:  3
+    Digest::SHA:    5
+    Fcntl:          1.06
+    Getopt::Long:   2.38
+    Lim:            0.14
+    Scalar::Util:   1
 resources:
     bugtracker:  http://github.com/jelu/lim-plugin-dns/issues
     homepage:    http://github.com/jelu/lim-plugin-dns/wiki
@@ -26,7 +31,7 @@ no_index:
     directory:
         - t
         - inc
-generated_by:       ExtUtils::MakeMaker version 6.55_02
+generated_by:       ExtUtils::MakeMaker version 6.57_05
 meta-spec:
     url:      http://module-build.sourceforge.net/META-spec-v1.4.html
     version:  1.4
